--- a/styles/index.scss
+++ b/styles/index.scss
@@ -43,6 +43,7 @@ body {
       color: rgba(241, 236, 232, 1);
       font-family: "lupio bold", sans-serif;
       text-transform: uppercase;
+      text-decoration: none;
     }
   }
 
