--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,7 @@
+@import "./footer";
+@import "./hero";
+@import "./ribbon";
+
 @font-face {
   font-family: "lupio black";
   src: url("../src/fonts/Fontspring-DEMO-lupio-black.otf") format("opentype")
@@ -7,6 +11,8 @@
   font-family: "lupio bold";
   src: url("../src/fonts/Fontspring-DEMO-lupio-bold.otf") format("opentype")
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 body {
   margin: 0;
