--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,10 +1,19 @@
 @import "./footer";
 @import "./hero";
 @import "./ribbon";
+@import "./two-column";
+@import "./bulletin-board";
+@import "./newsletter";
 
 @font-face {
   font-family: "lupio black";
-  src: url("../src/fonts/Fontspring-DEMO-lupio-black.otf") format("opentype")
+  src: url("../src/fonts/Fontspring-DEMO-lupio-black.otf") format("opentype");
+  font-weight: 900;
+}
+
+@font-face {
+  font-family: "lupio black italic";
+  src: url("../src/fonts/Fontspring-DEMO-lupio-black-italic.otf") format("opentype")
 }
 
 @font-face {
