--- a/styles/ribbon.scss
+++ b/styles/ribbon.scss
@@ -3,6 +3,7 @@
   align-items: center;
   gap: 1rem;
   height: 100px;
+  overflow: hidden;
 
   span {
     font-family: "lupio black", sans-serif;
@@ -12,5 +13,17 @@
     text-align: left;
     color: rgba(31, 91, 90, 1);
     text-wrap: nowrap;
+  }
+
+  &.dark {
+    background: rgba(18, 58, 58, 1);
+
+    img.dark {
+      filter: invert(100%);
+    }
+
+    span {
+      color: #fff;
+    }
   }
 }
