--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -25,6 +25,12 @@
     flex-grow: 1;
     text-align: center;
 
+    form {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+
     h2 {
       font-family: "Lupio Black", sans-serif;
       font-size: 115.7px;
