--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: "lupio black";
-  src: url("../src/fonts/Fontspring-DEMO-lupio-black.otf") format("opentype");
+  src: url("../src/fonts/Lupio-Black.woff2") format("woff2");
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
