--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,18 +1,11 @@
-@import "./footer";
-@import "./hero";
-@import "./ribbon";
-@import "./two-column";
-@import "./bulletin-board";
-@import "./newsletter";
-
 @font-face {
   font-family: "lupio bold";
-  src: url("../src/fonts/Fontspring-DEMO-lupio-bold.otf") format("opentype")
+  src: url("/fonts/Fontspring-DEMO-lupio-bold.otf") format("opentype")
 }
 
 @font-face {
   font-family: "lupio black";
-  src: url("../src/fonts/Lupio-Black.woff2") format("woff2");
+  src: url("/fonts/Lupio-Black.woff2") format("woff2");
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
@@ -70,3 +63,16 @@ body {
     text-transform: uppercase;
   }
 }
+
+@mixin mobile {
+  @media (max-width: 480px) {
+    @content;
+  }
+}
+
+@import "./footer";
+@import "./hero";
+@import "./ribbon";
+@import "./two-column";
+@import "./bulletin-board";
+@import "./newsletter";
