--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -5,14 +5,17 @@
   &__inner {
     display: flex;
 
+    @include mobile {
+      flex-direction: column;
+    }
+
     &__left {
       width: 60%;
 
       h1 {
         font-family: "lupio black", sans-serif;
-        font-size: 115.7px;
+        font-size: 8vw;
         font-weight: 900;
-        line-height: 120px;
         letter-spacing: -0.01em;
         text-align: left;
         color: rgba(241, 232, 219, 1);
