--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,54 +14,9 @@ body {
   margin: 0;
 }
 
-.header {
-  background: rgba(31, 91, 90, 1);
-  height: 107px;
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    width: 1000px;
-    margin: 0 auto;
-    height: 100%;
-
-    &__logo {
-      display: flex;
-      align-items: center;
-    }
-
-    &__button {
-      display: flex;
-      align-items: center;
-    }
-  }
-
-  &__links {
-    display: flex;
-    align-items: center;
-    gap: 1.2rem;
-
-    a {
-      color: rgba(241, 236, 232, 1);
-      font-family: "lupio bold", sans-serif;
-      text-transform: uppercase;
-      text-decoration: none;
-    }
-  }
-
-  button {
-    background: rgba(241, 236, 232, 1);
-    border-radius: 30px;
-    box-shadow: -5.45px 5.45px 0px 0px rgba(18, 58, 58, 1);
-    width: 161px;
-    height: 59px;
-    top: 24px;
-    left: 1179px;
-    padding: 18px 23px 19px 24px;
-    font-family: "lupio bold", sans-serif;
-    color: rgba(31, 91, 90, 1);
-    text-transform: uppercase;
-  }
+.container {
+  max-width: 1500px;
+  margin: 0 auto;
 }
 
 @mixin mobile {
@@ -76,3 +31,4 @@ body {
 @import "./two-column";
 @import "./bulletin-board";
 @import "./newsletter";
+@import "./header";
