--- a/styles/bulletin-board.scss
+++ b/styles/bulletin-board.scss
@@ -3,18 +3,22 @@
 
   h3 {
     font-family: "Lupio Black", sans-serif;
-    font-size: 115.7px;
+    font-size: 9vw;
     font-weight: 900;
-    line-height: 120px;
     letter-spacing: -0.01em;
     text-align: center;
     color: rgba(31, 91, 90, 1);
     text-transform: uppercase;
+    margin-bottom: 3rem;
+
+    @include mobile {
+      margin-bottom: 0;
+    }
   }
 
   h4 {
     font-family: Inter, sans-serif;
-    font-size: 33.3px;
+    font-size: 3vw;
     font-weight: 900;
     line-height: 63.78px;
     text-align: center;
@@ -26,7 +30,7 @@
 
     .left, .right {
       position: relative;
-      height: 100px;
+      height: 150px;
       width: 50%;
     }
 
