--- a/styles/ribbon.scss
+++ b/styles/ribbon.scss
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  height: 100px;
+  height: 16vw;
+  max-height: 100px;
   overflow: hidden;
 
   span {
