--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -42,7 +42,6 @@
       font-family: "Lupio Black", sans-serif;
       font-size: 10vw;
       font-weight: 900;
-      letter-spacing: -0.01em;
       text-align: center;
       text-transform: uppercase;
       color: rgba(241, 232, 219, 1);
@@ -56,6 +55,10 @@
       text-align: center;
       color: rgba(255, 255, 255, 1);
       margin-top: 0;
+
+      @include mobile {
+        font-size: 4vw;
+      }
     }
 
     input {
