--- a/styles/index.scss
+++ b/styles/index.scss
@@ -10,6 +10,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+a {
+  color: #1e5b5a;
+}
+
 body {
   margin: 0;
 }
@@ -17,6 +21,10 @@ body {
 .container {
   max-width: 1500px;
   margin: 0 auto;
+}
+
+textarea {
+  font-family: Arial, sans-serif;
 }
 
 @mixin mobile {
@@ -32,3 +40,6 @@ body {
 @import "./bulletin-board";
 @import "./newsletter";
 @import "./header";
+@import "./contact-form";
+@import "./social-media";
+@import "./placard";
