--- a/styles/two-column.scss
+++ b/styles/two-column.scss
@@ -23,8 +23,6 @@
   }
 
   .text {
-    background: rgba(241, 236, 232, 1);
-
     .inner {
       padding: 70px;
 
@@ -38,7 +36,6 @@
     font-family: "lupio black", sans-serif;
     font-weight: 900;
     font-size: 5vw;
-    color: rgba(31, 91, 90, 1);
     text-transform: uppercase;
     margin: 0;
   }
@@ -51,6 +48,25 @@
     text-align: left;
     color: rgba(81, 81, 81, 1);
     margin-bottom: 2rem;
+  }
+
+  &.light {
+    background: rgba(241, 236, 232, 1);
+
+    h3 {
+      color: rgba(31, 91, 90, 1);
+    }
+  }
+  &.dark {
+    background: #1e5b5a;
+
+    h3 {
+      color: #fff;
+    }
+
+    p {
+      color: #fff;
+    }
   }
 
   a.button {
