--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -36,7 +36,7 @@
       }
 
       h2 {
-        font-family: "lupio bold", sans-serif;
+        font-family: "lupio black", sans-serif;
         font-size: 4vw;
         font-weight: 900;
         text-align: left;
