--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -48,6 +48,12 @@
           font-size: 8vw;
         }
       }
+
+      p {
+        color: rgba(241, 232, 219, 1);
+        font-family: Inter, sans-serif;
+        font-size: 1.5rem;
+      }
     }
 
     &__right {
