--- a/styles/index.scss
+++ b/styles/index.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .container {
-  max-width: 1500px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -29,6 +29,18 @@ textarea {
 
 @mixin mobile {
   @media (max-width: 480px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-width: 481px) and (max-width: 900px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: 901px) {
     @content;
   }
 }
