--- a/styles/header.scss
+++ b/styles/header.scss
@@ -3,22 +3,38 @@
   height: 107px;
 
   &__inner {
-    display: flex;
-    justify-content: space-between;
-    width: 1000px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     height: 100%;
 
-    @include mobile {
-      width: 100%;
+    .links {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 1rem;
+      height: 100%;
+      gap: 1rem;
+
+      @include mobile {
+        gap: 0;
+      }
     }
 
     &__logo {
       display: flex;
       align-items: center;
 
+      a {
+        display: block;
+        width: 100px;
+        height: 50px;
+        position: relative;
+      }
+
       @include mobile {
         padding: 1rem;
+        width: 100px;
       }
     }
 
@@ -28,6 +44,44 @@
 
       @include mobile {
         padding: 1rem;
+      }
+
+      button {
+        background: rgba(241, 236, 232, 1);
+        border-radius: 30px;
+        box-shadow: -5.45px 5.45px 0px 0px rgba(18, 58, 58, 1);
+        width: 161px;
+        height: 59px;
+        top: 24px;
+        left: 1179px;
+        padding: 18px 23px 19px 24px;
+        font-family: "lupio bold", sans-serif;
+        color: rgba(31, 91, 90, 1);
+        text-transform: uppercase;
+
+        @include mobile {
+          width: 120px;
+          height: 40px;
+          font-size: .7rem;
+          padding: 0;
+        }
+      }
+    }
+
+    &__mobile-menu {
+      width: 2.2rem;
+      background: transparent;
+      border: 0;
+      padding: 0;
+
+      @include desktop {
+        display: none;
+      }
+
+      .segment {
+        height: 3px;
+        margin-bottom: 8px;
+        background: #fff;
       }
     }
   }
@@ -41,6 +95,10 @@
       display: none;
     }
 
+    @include tablet {
+      display: none;
+    }
+
     a {
       color: rgba(241, 236, 232, 1);
       font-family: "lupio bold", sans-serif;
@@ -49,17 +107,42 @@
     }
   }
 
-  button {
-    background: rgba(241, 236, 232, 1);
-    border-radius: 30px;
-    box-shadow: -5.45px 5.45px 0px 0px rgba(18, 58, 58, 1);
-    width: 161px;
-    height: 59px;
-    top: 24px;
-    left: 1179px;
-    padding: 18px 23px 19px 24px;
-    font-family: "lupio bold", sans-serif;
-    color: rgba(31, 91, 90, 1);
-    text-transform: uppercase;
+  &__drawer {
+    position: fixed;
+    top: 0;
+    left: 100vw;
+    height: 100vh;
+    background: #fff;
+    width: 80vw;
+    max-width: 20rem;
+    z-index: 2;
+    box-shadow: -4px 0px 12px 0px rgba(204,204,204,1);
+    display: none;
+
+    &.visible {
+      right: 0;
+      left: auto;
+      display: block;
+    }
+
+    menu {
+      padding: 1rem;
+      list-style-type: none;
+      margin: 0;
+
+      li {
+        border-bottom: 1px solid #1e5b5a;
+
+        &:last-child {
+          border-bottom: none;
+        }
+      }
+
+      a {
+        text-decoration: none;
+        display: block;
+        padding: .5rem;
+      }
+    }
   }
 }
