--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,6 +1,6 @@
 .hero {
   background: rgba(31, 91, 90, 1);
-  padding: 100px;
+  padding: 8vw;
 
   @include mobile {
     padding: 50px;
@@ -22,7 +22,7 @@
 
       h1 {
         font-family: "lupio black", sans-serif;
-        font-size: 6vw;
+        font-size: 7vw;
         font-weight: 900;
         letter-spacing: -0.01em;
         text-align: left;
