--- a/styles/contact-form.scss
+++ b/styles/contact-form.scss
@@ -5,10 +5,19 @@
     flex-direction: column;
   }
 
+  @include tablet {
+    flex-direction: column;
+  }
+
   .text, .image {
     width: 50%;
 
     @include mobile {
+      width: 100%;
+      min-height: 200px;
+    }
+
+    @include tablet {
       width: 100%;
       min-height: 200px;
     }
@@ -34,19 +43,10 @@
     }
   }
 
-  h3 {
-    font-family: "lupio black", sans-serif;
-    font-weight: 900;
-    font-size: 5vw;
-    color: rgba(31, 91, 90, 1);
-    text-transform: uppercase;
-    margin: 0;
-  }
-
   h2 {
     font-family: "lupio black", sans-serif;
     text-transform: uppercase;
-    font-size: 62.75px;
+    font-size: 5vw;
     font-weight: 900;
     line-height: 60.14px;
     letter-spacing: -0.01em;
