--- a/styles/contact-form.scss
+++ b/styles/contact-form.scss
@@ -48,10 +48,14 @@
     text-transform: uppercase;
     font-size: 5vw;
     font-weight: 900;
-    line-height: 60.14px;
     letter-spacing: -0.01em;
     text-align: left;
     color: rgba(31, 91, 90, 1);
+    margin: 0 0 2rem;
+
+    @include desktop-xl {
+      font-size: 80px;
+    }
   }
 
   form {
