--- a/styles/bulletin-board.scss
+++ b/styles/bulletin-board.scss
@@ -14,6 +14,14 @@
     @include mobile {
       margin-bottom: 0;
     }
+
+    @include desktop {
+      font-size: 100px;
+    }
+
+    @include desktop-xl {
+      font-size: 100px;
+    }
   }
 
   h4 {
