--- a/styles/two-cards.scss
+++ b/styles/two-cards.scss
@@ -9,11 +9,11 @@
     font-size: 4.5vw;
     font-family: "Lupio Black", sans-serif;
     text-align: center;
+    margin-bottom: 0;
   }
 
-  > p {
+  > .container > p {
     text-align: center;
-
   }
 
   .cards {
