--- a/styles/two-column.scss
+++ b/styles/two-column.scss
@@ -38,6 +38,10 @@
     font-size: 5vw;
     text-transform: uppercase;
     margin: 0;
+
+    @include desktop-xl {
+      font-size: 70px;
+    }
   }
 
   p {
