--- a/styles/index.scss
+++ b/styles/index.scss
@@ -64,3 +64,7 @@ textarea {
 @import "./membership-benefits";
 @import "./two-cards";
 @import "./text";
+@import "./subscription-form";
+@import "./subscription-term";
+@import "./subscription-term-card";
+@import "./subscription";
