--- a/styles/subscription-term.scss
+++ b/styles/subscription-term.scss
@@ -11,5 +11,10 @@
     display: flex;
     gap: 1rem;
     justify-content: center;
+
+    @include tablet {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
