--- a/styles/subscription-form.scss
+++ b/styles/subscription-form.scss
@@ -60,9 +60,13 @@
 
   form {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     gap: 1rem;
+  }
+
+  textarea {
+    width: 100%;
   }
 
   input,
@@ -83,8 +87,6 @@
   }
 
   textarea {
-    grid-column: 1 / 3;
-    grid-row: 4 / 9;
     padding-top: 10px;
   }
 
