--- a/styles/subscription-form.scss
+++ b/styles/subscription-form.scss
@@ -61,7 +61,7 @@
   form {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
     gap: 1rem;
   }
 
@@ -82,17 +82,13 @@
     }
   }
 
-  input {
+  input,
+  select {
     height: 30px;
   }
 
   textarea {
     padding-top: 10px;
-  }
-
-  .email,
-  .phone {
-    grid-column: 1 / 3;
   }
 
   button {
