--- a/styles/subscription-form.scss
+++ b/styles/subscription-form.scss
@@ -106,4 +106,12 @@
     text-transform: uppercase;
     border-radius: 20px;
   }
+
+  .success-msg {
+    color: green;
+  }
+
+  .error-msg {
+    color: red;
+  }
 }
