--- a/styles/subscription-term.scss
+++ b/styles/subscription-term.scss
@@ -1,4 +1,5 @@
 .subscription-term {
+
   h2 {
     color: #1e5b5a;
     text-transform: uppercase;
@@ -13,6 +14,11 @@
     justify-content: center;
 
     @include tablet {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    @include mobile {
       flex-direction: column;
       align-items: center;
     }
