--- a/styles/two-cards.scss
+++ b/styles/two-cards.scss
@@ -6,7 +6,7 @@
   h2 {
     text-transform: uppercase;
     color: #1e5b59;
-    font-size: 4.5vw;
+    font-size: clamp(1.7rem, 4.5vw, 4.5vw);
     font-family: "Lupio Black", sans-serif;
     text-align: center;
     margin-bottom: 0;
