--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -20,15 +20,10 @@
     &__right {
       display: flex;
       gap: 3rem;
-
-      @include mobile {
-        flex-direction: column;
-        gap: 1rem;
-      }
+      flex-wrap: wrap;
 
       &__column {
-        flex-basis: 0;
-        flex-grow: 1;
+        width: 10rem;
 
         h2 {
           font-family: "lupio bold", sans-serif;
