--- a/styles/two-column.scss
+++ b/styles/two-column.scss
@@ -24,7 +24,7 @@
 
   .text {
     .inner {
-      padding: 70px;
+      padding: clamp(1rem, 8vw, 60px);
 
       @include mobile {
         padding: 35px;
@@ -35,22 +35,26 @@
   h3 {
     font-family: "lupio black", sans-serif;
     font-weight: 900;
-    font-size: 5vw;
+    font-size: clamp(1.5rem, 5vw, 70px);
     text-transform: uppercase;
     margin: 0;
+  }
 
-    @include desktop-xl {
-      font-size: 70px;
-    }
+  h4 {
+    font-family: Inter, sans-serif;
+    color: rgba(81, 81, 81, 1);
+    font-size: 20px;
+    margin-bottom: .4rem;
   }
 
   p {
     font-family: Inter, sans-serif;
-    font-size: 20.28px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 30.91px;
     text-align: left;
     color: rgba(81, 81, 81, 1);
+    margin-top: 0;
     margin-bottom: 2rem;
   }
 
@@ -74,12 +78,12 @@
   }
 
   a.button {
+    display: block;
+    box-sizing: border-box;
     width: 171px;
-    height: 59px;
-    top: 1651px;
-    left: 790px;
+    max-width: 100%;
+    height: 55px;
     padding: 18px 19px 19px 19px;
-    gap: 0px;
     border-radius: 100px;
     background: rgba(31, 91, 90, 1);
     font-family: "lupio bold", sans-serif;
