--- a/styles/header.scss
+++ b/styles/header.scss
@@ -128,14 +128,14 @@
 
   &__drawer {
     &__drawer {
-      width: 20rem;
+      width: 17rem;
       position: fixed;
       top: 0;
-      right: -20rem;
+      right: -17rem;
       height: 100vh;
       background: #fff;
       z-index: 2;
-      transition: right 1s;
+      transition: right .5s;
 
       &.visible {
         right: 0;
@@ -143,7 +143,50 @@
       }
 
       &__inner {
-        padding: 1rem;
+        display: flex;
+        padding: .2rem;
+
+        .left {
+          flex-grow: 1;
+          margin: 1rem;
+        }
+
+        .right {
+          padding: .5rem;
+        }
+
+        .close-btn {
+          width: 2rem;
+          height: 2rem;
+          border-radius: 50%;
+          background: transparent;
+          padding: 0;
+          cursor: pointer;
+          border: none;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          position: relative;
+
+          .segment {
+            height: 2.5px;
+            width: 20px;
+            margin-bottom: 8px;
+            background: #000;
+            border-radius: 1.5rem;
+            position: absolute;
+          }
+
+          .segment:first-child {
+            rotate: 45deg;
+            top: 15px;
+            left: 6px;
+          }
+
+          .segment:last-child {
+            rotate: -45deg;
+            top: 15px;
+            left: 6px;
+          }
+        }
 
         menu {
           list-style-type: none;
@@ -151,6 +194,7 @@
           padding: 0;
 
           a {
+            color: #000;
             text-decoration: none;
             display: block;
             padding: .5rem;
