--- a/styles/subscription-term.scss
+++ b/styles/subscription-term.scss
@@ -1,5 +1,6 @@
 .subscription-term {
   margin-bottom: 2rem;
+  padding: 0 1rem;
 
   h2 {
     color: #1e5b5a;
@@ -13,11 +14,6 @@
     display: flex;
     gap: 1rem;
     justify-content: center;
-
-    @include tablet {
-      flex-direction: column;
-      align-items: center;
-    }
 
     @include mobile {
       flex-direction: column;
