--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -39,6 +39,10 @@
           line-height: 20.54px;
           text-align: left;
         }
+
+        a {
+          color: #fff;
+        }
       }
     }
   }
