--- a/styles/header.scss
+++ b/styles/header.scss
@@ -52,7 +52,8 @@
     }
 
     &__button {
-      display: flex;
+      /*display: flex;*/
+      display: none;
       align-items: center;
 
       @include mobile {
