--- a/styles/header.scss
+++ b/styles/header.scss
@@ -42,7 +42,7 @@
       a {
         display: block;
         width: 100px;
-        height: 50px;
+        aspect-ratio: 143 / 37;
         position: relative;
       }
 
