--- a/styles/membership-benefits.scss
+++ b/styles/membership-benefits.scss
@@ -6,9 +6,10 @@
   h2 {
     text-transform: uppercase;
     text-align: center;
-    font-size: 4vw;
+    font-size: clamp(1.7rem, 4.5vw, 4.5vw);
     font-family: "Lupio Black", sans-serif;
     color: rgba(31, 91, 90, 1);
+    margin-bottom: 0;
   }
 
   p {
