--- a/styles/contact-form.scss
+++ b/styles/contact-form.scss
@@ -46,16 +46,12 @@
   h2 {
     font-family: "lupio black", sans-serif;
     text-transform: uppercase;
-    font-size: 5vw;
+    font-size: clamp(24px, 5vw, 70px);
     font-weight: 900;
     letter-spacing: -0.01em;
     text-align: left;
     color: rgba(31, 91, 90, 1);
     margin: 0 0 2rem;
-
-    @include desktop-xl {
-      font-size: 80px;
-    }
   }
 
   form {
