--- a/styles/newsletter.scss
+++ b/styles/newsletter.scss
@@ -94,7 +94,7 @@
       border-radius: 300px;
       background: rgba(241, 232, 219, 1);
       border: 0;
-      box-shadow: -5.45px 5.45px 0px 0px #8c8782;
+      box-shadow: -5.45px 5.45px 0px 0px #706b67;
       font-family: "lupio bold", sans-serif;
       color: #1E5B59;
     }
