--- a/styles/index.scss
+++ b/styles/index.scss
@@ -68,3 +68,5 @@ textarea {
 @import "./subscription-term";
 @import "./subscription-term-card";
 @import "./subscription";
+@import "./stripe";
+@import "./button";
